# thepetheadquarters

./: .gitignore
server/: Procfile  pyproject.toml  railway.toml
server/apps/accounts/: mfa.py  models.py  permissions.py  rbac.py  serializers.py  tests.py  throttling.py  tokens.py  urls.py  views.py
server/apps/accounts/migrations/: 0002_usermfa_mfabackupcode.py  0003_user_role.py  0004_role.py  0005_alter_user_role.py
server/apps/admin_panel/: tests.py  urls.py
server/apps/admin_panel/serializers/: finances.py  orders.py  products.py
server/apps/admin_panel/services/: orders.py  uploads.py
server/apps/admin_panel/views/: analytics.py  audit.py  base.py  catalog.py  contact.py  customers.py  customizations.py  dashboard.py  finances.py  integrations.py  inventory.py  option_types.py  orders.py  products.py  promotions.py  (+7 more)
server/apps/analytics/: urls.py
server/apps/categories/: models.py
server/apps/contact/: views.py
server/apps/core/: exceptions.py  storage.py  tests.py  urls.py  views.py
server/apps/customizations/: apps.py  models.py  serializers.py  services.py  urls.py  viewsets.py
server/apps/expenses/: admin.py  models.py  services.py
server/apps/integrations/: models.py  services.py
server/apps/orders/: models.py  serializers.py  services.py  urls.py  views.py
server/apps/procurement/: services.py
server/apps/products/: models.py  serializers.py  urls.py  viewsets.py
server/apps/promotions/: services.py
server/apps/reviews/: urls.py  views.py
server/config/: settings.py  urls.py
server/scripts/: reseed_dropship_catalog.py
(+177 files in other folders)
